[project]
name = "ai-assistant-service"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
